added more stuff to homepage

--- a/Django_APP/templates/faqs.html
+++ b/Django_APP/templates/faqs.html
@@ -1,6 +1,10 @@
 {% include 'navbar.html' %} 
 {% load static %} 
-<link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+
 <title>Projects</title> 
         <section class="project-area"> 
             <center> 
