--- a/Django_APP/templates/navbar.html
+++ b/Django_APP/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %} 
-<link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
+
 <header class="p-3 bg-dark text-white">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -9,10 +9,9 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
+        <li><a href="/FAQs" class="nav-link px-2 text-white">FAQs</a></li>
+        <li><a href="/About" class="nav-link px-2 text-white">About</a></li>
       </ul>
 
       <div class="text-end">
@@ -22,4 +21,4 @@
     </div>
   </div>
 </header>
-<hr>
+<!-- <hr> -->
