--- a/Django_APP/templates/about.html
+++ b/Django_APP/templates/about.html
@@ -1,5 +1,9 @@
 {% include 'navbar.html' %} 
 {% load static %} 
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
 <link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
 <title>Contact</title> 
 <section id="contact"> 
