--- a/Django_APP/templates/home.html
+++ b/Django_APP/templates/home.html
@@ -1,41 +1,86 @@
-<!-- {% include 'navbar.html' %} 
-{% load static %} 
-
-<link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
-<title>Home</title> 
-<section class="home"> 
-        <center> 
-            <font size="6"> 
-                  
-<p>ABOUT ME </p> 
-  
-            </font> 
-            <img src="{% static 'images/Profile_img.png' %}" width="200" height="200"> 
-            <font size="4"> 
-                  
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p> 
-  
-            </font> 
-        </center> 
-</section> -->
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}{% endblock %}</title>
   {% load bootstrap5 %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
-  <link rel="stylesheet" href="{% static 'styles/style.css' %}"> 
+  {% load static %} 
+  {% include 'navbar.html' %} 
+  <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+
 </head>
-<body>
-    {% load static %} 
-    {% include 'navbar.html' %} 
+<body class="background">
+  <div class="container body">
+    <div class="px-4 pt-5 my-5 text-center border-bottom">
+      <h1 class="display-4 fw-bold">Regybox Scheduler</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Regybox Scheduler was created to solve the hassle of constantly scheduling Crossfit classes and the frustration of missing out when classes are full due to forgetting to book on time. Our app automatically registers you for classes, so you never have to worry about losing your spot again—focus on your training, and let us handle the rest.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Go to app</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Source Code</button>
+        </div>
+      </div>
+      <div class="overflow-hidden" style="max-height: 30vh;">
+        <div class="container px-5">
+          <img src="{% static 'images/bootstrap-docs.png' %}" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+        </div>
+      </div>
+    </div>
+
+    <div class="container px-4 py-5" id="custom-cards">
+      <h2 class="pb-2">Features</h2>
+  
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{% static 'images/unsplash-photo-1.jpg' %}');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Easy Scheduling</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img src="{% static 'images/logo.svg' %}" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col img__wrap">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg img__img" style="background-image: url({% static 'images/unsplash-photo-2.jpg' %});">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Flexible Options</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img src="{% static 'images/logo.svg' %}" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                </li>
+              </ul>
+            </div>
+          </div>
+          <p class="img__description rounded-5">Choose the classes that best fit your schedule, whether it’s early morning, afternoon, or evening sessions. You decide when to train.</p>
+        </div>
+  
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url({% static 'images/unsplash-photo-3.jpg' %});">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Stay on Track</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img src="{% static 'images/logo.svg' %}" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+
+
+  </div>
 
 
 
-  {% block content %}
-  {% endblock %}
+  
 </div>
 </body>
 </html>
