--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,8 +15,8 @@
       </ul>
 
       <div class="text-end">
-        <button type="button" class="btn btn-outline-light me-2">Login</button>
-        <button type="button" class="btn btn-warning">Sign-up</button>
+        <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Login</a>
+        <a href="" class="btn btn-warning">Sign-up</a>
       </div>
     </div>
   </div>
